vpc.tf
# Create a VPC

resource "aws_vpc" "worldknown" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "worldknown"
  }
}
